# viralify-diagrams

./: .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_diagram.py  custom_theme.py  graphviz_layout_example.py
tests/: __init__.py  test_diagram.py  test_exporters.py  test_graphviz_layout.py  test_theme.py
viralify_diagrams/: __init__.py
viralify_diagrams/core/: __init__.py  diagram.py  theme.py
viralify_diagrams/exporters/: __init__.py  animated_svg_exporter.py  png_frame_exporter.py  pro_svg_exporter.py  svg_exporter.py
viralify_diagrams/icons/: __init__.py  categories.py  registry.py
viralify_diagrams/integration/: __init__.py  orchestrator.py  presentation_client.py
viralify_diagrams/layouts/: __init__.py  base.py  channel_router.py  edge_aggregator.py  edge_bundler.py  edge_styler.py  graphviz_layout.py  grid.py  horizontal.py  radial.py  smart_edges.py  vertical.py
viralify_diagrams/narration/: __init__.py  diagram_narrator.py
viralify_diagrams/taxonomy/: __init__.py  categories.py  classifier.py  router.py  slide_optimizer.py
viralify_diagrams/templates/: __init__.py  base.py  registry.py
viralify_diagrams/templates/architecture/: __init__.py  c4.py
viralify_diagrams/templates/business/: __init__.py  bpmn.py
viralify_diagrams/templates/data/: __init__.py  dfd.py  erd.py  lineage.py
viralify_diagrams/templates/devops/: __init__.py  cicd.py  kubernetes.py
viralify_diagrams/templates/security/: __init__.py  threat_model.py
viralify_diagrams/templates/uml/: __init__.py  activity.py  class_diagram.py  sequence.py
viralify_diagrams/themes/: __init__.py  professional_themes.py
